@@ -71,7 +71,7 @@ AssFile::~AssFile() {
 
 /////////////////////
 // Load generic subs
-void AssFile::Load (const wxString _filename,const wxString charset) {
+void AssFile::Load (const wxString _filename,const wxString charset,bool addToRecent) {
 	bool ok = true;
 
 	try {
@@ -137,7 +137,9 @@ void AssFile::Load (const wxString _filename,const wxString charset) {
 	AddComment(_T("Script generated by Aegisub ") + GetAegisubLongVersionString());
 	AddComment(_T("http://www.aegisub.net"));
 	SetScriptInfo(_T("ScriptType"),_T("v4.00+"));
-	AddToRecent(_filename);
+
+	// Add to recent
+	if (addToRecent) AddToRecent(_filename);
 }
 
 
@@ -765,6 +767,16 @@ AssStyle *AssFile::GetStyle(wxString name) {
 // Adds file name to list of recent
 void AssFile::AddToRecent(wxString file) {
 	Options.AddToRecentList(file,_T("Recent sub"));
+}
+
+
+///////////////////////////////
+// List of supported wildcards
+wxString AssFile::GetWildcardList(int mode) {
+	if (mode == 0) return _T("All Supported Types (*.ass,*.ssa,*.srt,*.txt,*.mkv,*.mks,*.mka)|*.ass;*.ssa;*.srt;*.txt;*.mkv;*.mks;*.mka|Advanced Substation Alpha (*.ass)|*.ass|Substation Alpha (*.ssa)|*.ssa|SubRip (*.srt)|*.srt|Plain-text (*.txt)|*.txt|Matroska (*.mkv,*.mks,*.mka)|*.mkv;*.mks;*.mka");
+	else if (mode == 1) return _T("Advanced Substation Alpha (*.ass)|*.ass");
+	else if (mode == 2) return _T("All Supported Types (*.ass,*.ssa,*.srt,*.txt,*.mkv,*.mks,*.mka)|*.ass;*.ssa;*.srt;*.txt|Advanced Substation Alpha (*.ass)|*.ass|Substation Alpha (*.ssa)|*.ssa|SubRip (*.srt)|*.srt|Plain-text (*.txt)|*.txt");
+	else return _T("");
 }
 
 
